--- a/src/gcweb/footer.ejs
+++ b/src/gcweb/footer.ejs
@@ -4,46 +4,89 @@
  * @param? termsLink Used to override the Terms and conditions link in the footer.
  * @param? privacyLink Used to override the Privacy link in the footer.
  * @param? showFooter Used to determine if the page footer will be displayed.
+ * @param? contextualFooter Used to determine if the page contextual band will be displayed.
+ * @param? hideFooterMain Used to determine if the main footer will be displayed.
+ * @param? hideFooterCorporate Used to determine if the corportate footer links will be displayed.
 -%>
 <footer id="wb-info">
-    <div id="transactFooter" class="landscape">
-        <%_ if (pr.showFooter != false) { -%>
-        <nav class="container wb-navcurr" aria-labelledby="aboutGov">
-            <h2 class="wb-inv" id="aboutGov"><^- msg('About government') ^></h2>
-            <ul class="list-unstyled colcount-sm-2 colcount-md-3">
-                <%_ if (pr.contactLinks != null && pr.contactLinks.length > 0) { 
-                    const link=pr.contactLinks[0]; -%>
-                    <li><a href="<%- link.href %>"><^- msg('Contact us') ^></a></li>
-                <%_ } else { -%>
-                    <li><a href="<^- msg('https://www.canada.ca/en/contact.html') ^>"><^- msg('Contact us') ^></a></li>
-                <%_ } -%>
-                <li><a href="<^- msg('https://www.canada.ca/en/government/dept.html') ^>"><^- msg('Departments and agencies') ^></a></li>
-                <li><a href="<^- msg('https://www.canada.ca/en/government/publicservice.html') ^>"><^- msg('Public service and military') ^></a></li>
-                <li><a href="<^- msg('https://www.canada.ca/en/news.html') ^>"><^- msg('News') ^></a></li>
-                <li><a href="<^- msg('https://www.canada.ca/en/government/system/laws.html') ^>"><^- msg('Treaties, laws and regulations') ^></a></li>
-                <li><a href="<^- msg('https://www.canada.ca/en/transparency/reporting.html') ^>"><^- msg('Government-wide reporting') ^></a></li>
-                <li><a href="<^- msg('https://pm.gc.ca/en') ^>"><^- msg('Prime Minister') ^></a></li>
-                <li><a href="<^- msg('https://www.canada.ca/en/government/system.html') ^>"><^- msg('About government') ^></a></li>
-                <li><a href="<^- msg('https://open.canada.ca/en') ^>"><^- msg('Open government') ^></a></li>
-            </ul>
-        </nav>
-        <%_ } -%>
-    </div>
-    <div class="brand">
-        <div class="container">
-            <div class="row">
-                <nav class="col-md-9 col-lg-10 ftr-urlt-lnk" aria-labelledby="aboutSite">
-                    <h2 class="wb-inv" id="aboutSite"><^- msg('About this site') ^></h2>
-                    <%_ if (pr.showFooter != false) { -%>
-                        <ul>
+    <h2 class="wb-inv">About this site</h2>
+    <%_ if (pr.contextualFooter != null) { -%>
+        <div class="gc-contextual">
+            <div class="container">
+                <nav>
+                    <h3><%- pr.contextualFooter.title %></h3>
+                    <ul class="list-col-xs-1 list-col-sm-2 list-col-md-3">
+                        <%_ for (var footerIndex=0; footerIndex<(pr.contextualFooter.link.length > 3 ? 3 : pr.contextualFooter.link.length); footerIndex++) {
+                            const link=pr.contextualFooter.link[footerIndex];-%>
+                            <li><a href="<%- link.href %>"><%- link.text %></a></li>
+                        <%_ } -%>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    <%_ } -%>
+    <%_ if (pr.showFooter != false && pr.hideFooterMain != true) { -%>
+        <div id="transactFooter" class="gc-main-footer">
+            <div class="container">
+                <nav>
+                    <h3><^- msg('Government of Canada') ^></h3>
+                    <ul class="list-col-xs-1 list-col-sm-2 list-col-md-3">
+                        <%_ if (pr.contactLinks != null && pr.contactLinks.length > 0) {
+                            const link=pr.contactLinks[0]; -%>
+                            <li><a href="<%- link.href %>"><^- msg('All Contacts') ^></a></li>
+                        <%_ } else { -%>
+                            <li><a href="<^- msg('https://www.canada.ca/en/contact.html') ^>"><^- msg('All Contacts') ^></a></li>
+                        <%_ } -%>
+                        <li><a href="<^- msg('https://www.canada.ca/en/government/dept.html') ^>"><^- msg('Departments and agencies') ^></a></li>
+                        <li><a href="<^- msg('https://www.canada.ca/en/government/system.html') ^>"><^- msg('About government') ^></a></li></ul>
+                    <h4><span class="wb-inv"><^- msg('Themes and topics') ^></span></h4>
+                    <ul class="list-unstyled colcount-sm-2 colcount-md-3">
+                        <li><a href="<^- msg('https://www.canada.ca/en/services/jobs.html') ^>"><^- msg('Jobs') ^></a></li>
+                        <li><a href="<^- msg('https://www.canada.ca/en/services/immigration-citizenship.html') ^>"><^- msg('Immigration and citizenship') ^></a></li>
+                        <li><a href="<^- msg('https://travel.gc.ca/') ^>"><^- msg('Travel and tourism') ^></a></li>
+                        <li><a href="<^- msg('https://www.canada.ca/en/services/business.html') ^>"><^- msg('Business') ^></a></li>
+                        <li><a href="<^- msg('https://www.canada.ca/en/services/benefits.html') ^>"><^- msg('Benefits') ^></a></li>
+                        <li><a href="<^- msg('https://www.canada.ca/en/services/health.html') ^>"><^- msg('Health') ^></a></li>
+                        <li><a href="<^- msg('https://www.canada.ca/en/services/taxes.html') ^>"><^- msg('Taxes') ^></a></li>
+                        <li><a href="<^- msg('https://www.canada.ca/en/services/environment.html') ^>"><^- msg('Environment and natural resources') ^></a></li>
+                        <li><a href="<^- msg('https://www.canada.ca/en/services/defence.html') ^>"><^- msg('National security and defence') ^></a></li>
+                        <li><a href="<^- msg('https://www.canada.ca/en/services/culture.html') ^>"><^- msg('Culture, history and sport') ^></a></li>
+                        <li><a href="<^- msg('https://www.canada.ca/en/services/policing.html') ^>"><^- msg('Policing, justice and emergencies') ^></a></li>
+                        <li><a href="<^- msg('https://www.canada.ca/en/services/transport.html') ^>"><^- msg('Transport and infrastructure') ^></a></li>
+                        <li><a href="<^- msg('https://international.gc.ca/world-monde/index.aspx?lang=eng') ^>"><^- msg('Canada and the world') ^></a></li>
+                        <li><a href="<^- msg('https://www.canada.ca/en/services/finance.html') ^>"><^- msg('Money and finance') ^></a></li>
+                        <li><a href="<^- msg('https://www.canada.ca/en/services/science.html') ^>"><^- msg('Science and innovation') ^></a></li>
+                        <li><a href="<^- msg('https://www.canada.ca/en/services/indigenous-peoples.html') ^>"><^- msg('Indigenous peoples') ^></a></li>
+                        <li><a href="<^- msg('https://www.canada.ca/en/services/veterans.html') ^>"><^- msg('Veterans and military') ^></a></li>
+                        <li><a href="<^- msg('https://www.canada.ca/en/services/youth.html') ^>"><^- msg('Youth') ^></a></li></ul>
+                </nav>
+            </div>
+        </div>
+    <%_ } -%>
+    <div class="gc-sub-footer">
+        <div class="container d-flex align-items-center">
+            <nav>
+                <h3 class="wb-inv">Government of Canada Corporate</h3>
+                <%_ if (pr.showFooter != false) { -%>
+                    <ul>
+                        <%_ if (pr.hideFooterCorporate != true) { -%>
                             <li><a href="<^- msg('https://www.canada.ca/en/social.html') ^>"><^- msg('Social media') ^></a></li>
                             <li><a href="<^- msg('https://www.canada.ca/en/mobile.html') ^>"><^- msg('Mobile applications') ^></a></li>
                             <li><a href="<^- msg('https://www.canada.ca/en/government/about.html') ^>"><^- msg('About Canada.ca') ^></a></li>
+                        <%_ } -%>
+                        <%_ if (pr.termsLink != null) { -%>
+                            <li><a href="<%- pr.termsLink.href %>"><^- msg('Terms and conditions') ^></a></li>
+                        <%_ } else { -%>
                             <li><a href="<^- msg('https://www.canada.ca/en/transparency/terms.html') ^>"><^- msg('Terms and conditions') ^></a></li>
+                        <%_ } -%>
+                        <%_ if (pr.privacyLink != null) { -%>
+                            <li><a href="<%- pr.privacyLink.href %>"><^- msg('Privacy') ^></a></li>
+                        <%_ } else { -%>
                             <li><a href="<^- msg('https://www.canada.ca/en/transparency/privacy.html') ^>"><^- msg('Privacy') ^></a></li>
-                        </ul>
-                    <%_ } else { -%>
-                        <ul>
+                        <%_ } -%>
+                    </ul>
+                <%_ } else { -%>
+                    <ul>
                         <%_ if (pr.contactLinks != null && pr.contactLinks.length > 0) {
                             const link=pr.contactLinks[0]; -%>
                             <li><a href="<%- (link.href)? link.href: '<^- msg('https://www.canada.ca/en/contact.html') ^>' %>"<%- (link.newWindow==true)? ' target="_blank"  rel="noopener"': '' %>><^- msg('Contact information') ^><%_ if (link.newWindow==true) { -%><span class="wb-inv"> <^- msg('This link will open in a new window') ^></span><%_ } -%></a></li>
@@ -64,15 +107,11 @@
                         <%_ } else { -%>
                             <li><a href="<^- msg('https://www.canada.ca/en/transparency/privacy.html') ^>"><^- msg('Privacy') ^></a></li>
                         <%_ } -%>
-                        </ul>
-                    <%_ } -%>
-                </nav>
-                <div class="col-xs-6 visible-sm visible-xs tofpg">
-                    <a href="#wb-cont"><^- msg('Top of Page') ^> <span class="glyphicon glyphicon-chevron-up"></span></a>
-                </div>
-                <div id="StdIssueWasHere2" class="col-xs-6 col-md-2 text-right">
-                    <img src="<%- wet.builder.environment(pr.cdnEnv) %>wet-boew/assets/wmms-blk.svg" alt="<^- msg('Symbol of the Government of Canada') ^>">
-                </div>
+                    </ul>
+                <%_ } -%>
+            </nav>
+            <div class="wtrmrk align-self-end">
+                <img src="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/assets/wmms-blk.svg" alt="Symbol of the Government of Canada">
             </div>
         </div>
     </div>
