--- a/src/gcweb/footer.ejs
+++ b/src/gcweb/footer.ejs
@@ -38,7 +38,8 @@
                             <li><a href="<^- msg('https://www.canada.ca/en/contact.html') ^>"><^- msg('All Contacts') ^></a></li>
                         <%_ } -%>
                         <li><a href="<^- msg('https://www.canada.ca/en/government/dept.html') ^>"><^- msg('Departments and agencies') ^></a></li>
-                        <li><a href="<^- msg('https://www.canada.ca/en/government/system.html') ^>"><^- msg('About government') ^></a></li></ul>
+                        <li><a href="<^- msg('https://www.canada.ca/en/government/system.html') ^>"><^- msg('About government') ^></a></li>
+                    </ul>
                     <h4><span class="wb-inv"><^- msg('Themes and topics') ^></span></h4>
                     <ul class="list-unstyled colcount-sm-2 colcount-md-3">
                         <li><a href="<^- msg('https://www.canada.ca/en/services/jobs.html') ^>"><^- msg('Jobs') ^></a></li>
@@ -58,7 +59,8 @@
                         <li><a href="<^- msg('https://www.canada.ca/en/services/science.html') ^>"><^- msg('Science and innovation') ^></a></li>
                         <li><a href="<^- msg('https://www.canada.ca/en/services/indigenous-peoples.html') ^>"><^- msg('Indigenous peoples') ^></a></li>
                         <li><a href="<^- msg('https://www.canada.ca/en/services/veterans.html') ^>"><^- msg('Veterans and military') ^></a></li>
-                        <li><a href="<^- msg('https://www.canada.ca/en/services/youth.html') ^>"><^- msg('Youth') ^></a></li></ul>
+                        <li><a href="<^- msg('https://www.canada.ca/en/services/youth.html') ^>"><^- msg('Youth') ^></a></li>
+                    </ul>
                 </nav>
             </div>
         </div>
