Fixing info banner button

--- a/src/gcweb/appTop.ejs
+++ b/src/gcweb/appTop.ejs
@@ -38,7 +38,7 @@
                         </span>
                     <%_ } -%>
                     <%_ if (pr.infoBanner.button != null) { -%>
-                        <button class="cdts-banner-button btn-primary" type="button" href="<%- pr.infoBanner.button.href %>"><%= pr.infoBanner.button.text %></button>
+                        <a class="btn cdts-banner-button btn-primary" type="button" href="<%- pr.infoBanner.button.href %>"><%= pr.infoBanner.button.text %></a>
                     <%_ } -%>
                 </div>
             </div>
