--- a/src/gcweb/footer.ejs
+++ b/src/gcweb/footer.ejs
@@ -19,7 +19,7 @@
                         <ul class="list-col-xs-1 list-col-sm-2 list-col-md-3">
                             <%_ for (var footerIndex=0; footerIndex<(pr.contextualFooter.links.length > 3 ? 3 : pr.contextualFooter.links.length); footerIndex++) {
                                 const link=pr.contextualFooter.links[footerIndex];-%>
-                                <li><a href="<%- link.href %>"><%= link.text %></a></li>
+                                <li><a href="<%- link.href %>" <%- (link.newWindow==true)? ' target="_blank"': '' %>><%= link.text %></a></li>
                             <%_ } -%>
                         </ul>
                     <%_ } -%>
@@ -79,12 +79,12 @@
                             <li><a href="<^- msg('https://www.canada.ca/en/government/about.html') ^>"><^- msg('About Canada.ca') ^></a></li>
                         <%_ } -%>
                         <%_ if (pr.termsLink != null) { -%>
-                            <li><a href="<%- pr.termsLink.href %>"><^- msg('Terms and conditions') ^></a></li>
+                            <li><a href="<%- pr.termsLink.href %>" <%- (pr.termsLink.newWindow==true)? ' target="_blank"': '' %>><^- msg('Terms and conditions') ^></a></li>
                         <%_ } else { -%>
                             <li><a href="<^- msg('https://www.canada.ca/en/transparency/terms.html') ^>"><^- msg('Terms and conditions') ^></a></li>
                         <%_ } -%>
                         <%_ if (pr.privacyLink != null) { -%>
-                            <li><a href="<%- pr.privacyLink.href %>"><^- msg('Privacy') ^></a></li>
+                            <li><a href="<%- pr.privacyLink.href %>" <%- (pr.privacyLink.newWindow==true)? ' target="_blank"': '' %>><^- msg('Privacy') ^></a></li>
                         <%_ } else { -%>
                             <li><a href="<^- msg('https://www.canada.ca/en/transparency/privacy.html') ^>"><^- msg('Privacy') ^></a></li>
                         <%_ } -%>
